# egrid

./: README.md  requirements.txt  setup.cfg
src/egrid/: __init__.py  _types.py  builder.py  check.py  factorgen.py  factors.py  gridmodel.py  input.py  model.py  topo.py
tests/: context.py  unittest_builder.py  unittest_check.py  unittest_factorgen.py  unittest_factors.py  unittest_gridmodel.py  unittest_model.py  unittest_topo.py  unittest_types.py
