[metadata]
name = egrid
version = 0.0.7
author = pyprg
author_email = pyprg@outlook.com
description = Model of an electric distribution network for calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyprg/egrid
project_urls =
    Bug Tracker = https://github.com/pyprg/egrid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    graphparser ==0.8.3
    networkx >=3.1
    numpy >=1.22.3
    pandas >=1.4.0
    scipy >=1.8.0

[options.packages.find]
where = src